# TargetCloudDetect

./: README.md  pyproject.toml
target_cloud_detect/: __init__.py  model.py
